--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   path: ^1.8.1
   sqflite: ^2.0.2+1
   location: ^4.4.0
+  google_maps_flutter: ^2.1.8
+  http: ^0.13.4
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+     - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
